# openai_proxy

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.docker.sh  config.toml
.github/workflows/: openai-proxy.yaml
src/: key_manager.rs  logger.rs  main.rs  state.rs  utils.rs
src/middleware/: authorization.rs
src/models/: authorization.rs  config.rs  mod.rs
