[package]
name = "openai-proxy"
version = "0.1.3"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
figment = { version = "0.10", features = ["toml", "json", "env"] }
log = "0.4.27"
log4rs = "1.3.0"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls", "gzip", "stream"] }
futures-util = "0.3"
async-stream = "0.3"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7.17"
axum = "0.8.4"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
uuid = { version = "1.7", features = ["serde", "v4"] }
http-body-util = "0.1.3"
http = "1.3.1"
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
